apps/base/echoserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
  labels:
    pod-security.kubernetes.io/enforce: restricted
