apps/base/echoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - port: 5678
      targetPort: 5678
      nodePort: 30000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: echo
