apps/base/echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  # annotations:
  #   ingress.kubernetes.io/ssl-redirect: "true"
spec:
  # tls:
  # - hosts: 
  #   - hello.local.gd
  #   secretName: hello-cert
  rules:
  - host: change.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 5678
